面试知识点梳理04(2021年04月24日)-垃圾收集器内容补充